parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instruction program
Rule 2     program -> instruction
Rule 3     instruction -> instruction_while
Rule 4     instruction -> instruction_for
Rule 5     instruction -> instruction_if
Rule 6     instruction -> instruction_print ;
Rule 7     instruction -> instruction_return ;
Rule 8     instruction -> instruction_assign ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> CONTINUE ;
Rule 11    instruction -> { program }
Rule 12    instruction_while -> WHILE ( expression ) instruction
Rule 13    instruction_for -> FOR ID ASSIGN expression RANGE expression instruction
Rule 14    instruction_if -> IF ( expression ) instruction
Rule 15    instruction_if -> IF ( expression ) instruction ELSE instruction
Rule 16    instruction_print -> PRINT printables
Rule 17    printables -> printable
Rule 18    printables -> printable , printables
Rule 19    printable -> expression
Rule 20    printable -> str
Rule 21    str -> STRING
Rule 22    instruction_return -> RETURN
Rule 23    instruction_return -> RETURN expression
Rule 24    instruction_assign -> assignable ASSIGN expression
Rule 25    instruction_assign -> assignable ADDASSIGN expression
Rule 26    instruction_assign -> assignable SUBASSIGN expression
Rule 27    instruction_assign -> assignable MULASSIGN expression
Rule 28    instruction_assign -> assignable DIVASSIGN expression
Rule 29    assignable -> ID
Rule 30    assignable -> matrix_element
Rule 31    assignable -> vector_element
Rule 32    expression -> expression TRANSPOSE
Rule 33    expression -> ( expression )
Rule 34    expression -> create_matrix ( expression )
Rule 35    expression -> SUB expression
Rule 36    expression -> assignable
Rule 37    expression -> matrix
Rule 38    expression -> INTNUM
Rule 39    expression -> FLOATNUM
Rule 40    expression -> expression ADD expression
Rule 41    expression -> expression SUB expression
Rule 42    expression -> expression MUL expression
Rule 43    expression -> expression DIV expression
Rule 44    expression -> expression DOTADD expression
Rule 45    expression -> expression DOTSUB expression
Rule 46    expression -> expression DOTMUL expression
Rule 47    expression -> expression DOTDIV expression
Rule 48    expression -> expression GREATERTHAN expression
Rule 49    expression -> expression LESSTHAN expression
Rule 50    expression -> expression EQUAL expression
Rule 51    expression -> expression NOTEQUAL expression
Rule 52    expression -> expression LESSEQUAL expression
Rule 53    expression -> expression GREATEREQUAL expression
Rule 54    matrix -> [ vectors ]
Rule 55    create_matrix -> ZEROS
Rule 56    create_matrix -> ONES
Rule 57    create_matrix -> EYE
Rule 58    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 59    vectors -> vector , vectors
Rule 60    vectors -> vector
Rule 61    vector -> [ variables ]
Rule 62    vector_element -> ID [ expression ]
Rule 63    variables -> expression , variables
Rule 64    variables -> expression

Terminals, with rules where they appear

(                    : 12 14 15 33 34
)                    : 12 14 15 33 34
,                    : 18 58 59 63
;                    : 6 7 8 9 10
ADD                  : 40
ADDASSIGN            : 25
ASSIGN               : 13 24
BREAK                : 9
CONTINUE             : 10
DIV                  : 43
DIVASSIGN            : 28
DOTADD               : 44
DOTDIV               : 47
DOTMUL               : 46
DOTSUB               : 45
ELSE                 : 15
EQUAL                : 50
EYE                  : 57
FLOATNUM             : 39
FOR                  : 13
GREATEREQUAL         : 53
GREATERTHAN          : 48
ID                   : 13 29 58 62
IF                   : 14 15
INTNUM               : 38 58 58
LESSEQUAL            : 52
LESSTHAN             : 49
MUL                  : 42
MULASSIGN            : 27
NOTEQUAL             : 51
ONES                 : 56
PRINT                : 16
RANGE                : 13
RETURN               : 22 23
STRING               : 21
SUB                  : 35 41
SUBASSIGN            : 26
TRANSPOSE            : 32
WHILE                : 12
ZEROS                : 55
[                    : 54 58 61 62
]                    : 54 58 61 62
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

assignable           : 24 25 26 27 28 36
create_matrix        : 34
expression           : 12 13 13 14 15 19 23 24 25 26 27 28 32 33 34 35 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 62 63 64
instruction          : 1 2 12 13 14 15 15
instruction_assign   : 8
instruction_for      : 4
instruction_if       : 5
instruction_print    : 6
instruction_return   : 7
instruction_while    : 3
matrix               : 37
matrix_element       : 30
printable            : 17 18
printables           : 16 18
program              : 1 11 0
str                  : 20
variables            : 61 63
vector               : 59 60
vector_element       : 31
vectors              : 54 59

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instruction program
    (2) program -> . instruction
    (3) instruction -> . instruction_while
    (4) instruction -> . instruction_for
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_print ;
    (7) instruction -> . instruction_return ;
    (8) instruction -> . instruction_assign ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . { program }
    (12) instruction_while -> . WHILE ( expression ) instruction
    (13) instruction_for -> . FOR ID ASSIGN expression RANGE expression instruction
    (14) instruction_if -> . IF ( expression ) instruction
    (15) instruction_if -> . IF ( expression ) instruction ELSE instruction
    (16) instruction_print -> . PRINT printables
    (22) instruction_return -> . RETURN
    (23) instruction_return -> . RETURN expression
    (24) instruction_assign -> . assignable ASSIGN expression
    (25) instruction_assign -> . assignable ADDASSIGN expression
    (26) instruction_assign -> . assignable SUBASSIGN expression
    (27) instruction_assign -> . assignable MULASSIGN expression
    (28) instruction_assign -> . assignable DIVASSIGN expression
    (29) assignable -> . ID
    (30) assignable -> . matrix_element
    (31) assignable -> . vector_element
    (58) matrix_element -> . ID [ INTNUM , INTNUM ]
    (62) vector_element -> . ID [ expression ]

    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    {               shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 14

    program                        shift and go to state 1
    instruction                    shift and go to state 2
    instruction_while              shift and go to state 3
    instruction_for                shift and go to state 4
    instruction_if                 shift and go to state 5
    instruction_print              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 19
    vector_element                 shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> instruction . program
    (2) program -> instruction .
    (1) program -> . instruction program
    (2) program -> . instruction
    (3) instruction -> . instruction_while
    (4) instruction -> . instruction_for
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_print ;
    (7) instruction -> . instruction_return ;
    (8) instruction -> . instruction_assign ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . { program }
    (12) instruction_while -> . WHILE ( expression ) instruction
    (13) instruction_for -> . FOR ID ASSIGN expression RANGE expression instruction
    (14) instruction_if -> . IF ( expression ) instruction
    (15) instruction_if -> . IF ( expression ) instruction ELSE instruction
    (16) instruction_print -> . PRINT printables
    (22) instruction_return -> . RETURN
    (23) instruction_return -> . RETURN expression
    (24) instruction_assign -> . assignable ASSIGN expression
    (25) instruction_assign -> . assignable ADDASSIGN expression
    (26) instruction_assign -> . assignable SUBASSIGN expression
    (27) instruction_assign -> . assignable MULASSIGN expression
    (28) instruction_assign -> . assignable DIVASSIGN expression
    (29) assignable -> . ID
    (30) assignable -> . matrix_element
    (31) assignable -> . vector_element
    (58) matrix_element -> . ID [ INTNUM , INTNUM ]
    (62) vector_element -> . ID [ expression ]

    $end            reduce using rule 2 (program -> instruction .)
    }               reduce using rule 2 (program -> instruction .)
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    {               shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 14

    instruction                    shift and go to state 2
    program                        shift and go to state 21
    instruction_while              shift and go to state 3
    instruction_for                shift and go to state 4
    instruction_if                 shift and go to state 5
    instruction_print              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 19
    vector_element                 shift and go to state 20

state 3

    (3) instruction -> instruction_while .

    BREAK           reduce using rule 3 (instruction -> instruction_while .)
    CONTINUE        reduce using rule 3 (instruction -> instruction_while .)
    {               reduce using rule 3 (instruction -> instruction_while .)
    WHILE           reduce using rule 3 (instruction -> instruction_while .)
    FOR             reduce using rule 3 (instruction -> instruction_while .)
    IF              reduce using rule 3 (instruction -> instruction_while .)
    PRINT           reduce using rule 3 (instruction -> instruction_while .)
    RETURN          reduce using rule 3 (instruction -> instruction_while .)
    ID              reduce using rule 3 (instruction -> instruction_while .)
    $end            reduce using rule 3 (instruction -> instruction_while .)
    }               reduce using rule 3 (instruction -> instruction_while .)
    ELSE            reduce using rule 3 (instruction -> instruction_while .)


state 4

    (4) instruction -> instruction_for .

    BREAK           reduce using rule 4 (instruction -> instruction_for .)
    CONTINUE        reduce using rule 4 (instruction -> instruction_for .)
    {               reduce using rule 4 (instruction -> instruction_for .)
    WHILE           reduce using rule 4 (instruction -> instruction_for .)
    FOR             reduce using rule 4 (instruction -> instruction_for .)
    IF              reduce using rule 4 (instruction -> instruction_for .)
    PRINT           reduce using rule 4 (instruction -> instruction_for .)
    RETURN          reduce using rule 4 (instruction -> instruction_for .)
    ID              reduce using rule 4 (instruction -> instruction_for .)
    $end            reduce using rule 4 (instruction -> instruction_for .)
    }               reduce using rule 4 (instruction -> instruction_for .)
    ELSE            reduce using rule 4 (instruction -> instruction_for .)


state 5

    (5) instruction -> instruction_if .

    BREAK           reduce using rule 5 (instruction -> instruction_if .)
    CONTINUE        reduce using rule 5 (instruction -> instruction_if .)
    {               reduce using rule 5 (instruction -> instruction_if .)
    WHILE           reduce using rule 5 (instruction -> instruction_if .)
    FOR             reduce using rule 5 (instruction -> instruction_if .)
    IF              reduce using rule 5 (instruction -> instruction_if .)
    PRINT           reduce using rule 5 (instruction -> instruction_if .)
    RETURN          reduce using rule 5 (instruction -> instruction_if .)
    ID              reduce using rule 5 (instruction -> instruction_if .)
    $end            reduce using rule 5 (instruction -> instruction_if .)
    }               reduce using rule 5 (instruction -> instruction_if .)
    ELSE            reduce using rule 5 (instruction -> instruction_if .)


state 6

    (6) instruction -> instruction_print . ;

    ;               shift and go to state 22


state 7

    (7) instruction -> instruction_return . ;

    ;               shift and go to state 23


state 8

    (8) instruction -> instruction_assign . ;

    ;               shift and go to state 24


state 9

    (9) instruction -> BREAK . ;

    ;               shift and go to state 25


state 10

    (10) instruction -> CONTINUE . ;

    ;               shift and go to state 26


state 11

    (11) instruction -> { . program }
    (1) program -> . instruction program
    (2) program -> . instruction
    (3) instruction -> . instruction_while
    (4) instruction -> . instruction_for
    (5) instruction -> . instruction_if
    (6) instruction -> . instruction_print ;
    (7) instruction -> . instruction_return ;
    (8) instruction -> . instruction_assign ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . { program }
    (12) instruction_while -> . WHILE ( expression ) instruction
    (13) instruction_for -> . FOR ID ASSIGN expression RANGE expression instruction
    (14) instruction_if -> . IF ( expression ) instruction
    (15) instruction_if -> . IF ( expression ) instruction ELSE instruction
    (16) instruction_print -> . PRINT printables
    (22) instruction_return -> . RETURN
    (23) instruction_return -> . RETURN expression
    (24) instruction_assign -> . assignable ASSIGN expression
    (25) instruction_assign -> . assignable ADDASSIGN expression
    (26) instruction_assign -> . assignable SUBASSIGN expression
    (27) instruction_assign -> . assignable MULASSIGN expression
    (28) instruction_assign -> . assignable DIVASSIGN expression
    (29) assignable -> . ID
    (30) assignable -> . matrix_element
    (31) assignable -> . vector_element
    (58) matrix_element -> . ID [ INTNUM , INTNUM ]
    (62) vector_element -> . ID [ expression ]

    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    {               shift and go to state 11
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 14

    program                        shift and go to state 27
    instruction                    shift and go to state 2
    instruction_while              shift and go to state 3
    instruction_for                shift and go to state 4
    instruction_if                 shift and go to state 5
    instruction_print              shift and go to state 6
    instruction_return             shift and go to state 7
    instruction_assign             shift and go to state 8
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 19
    vector_element                 shift and go to state 20

state 12

    (12) instruction_while -> WHILE . ( expression ) instruction

    (               shift and go to state 28


state 13

    (13) instruction_for -> FOR . ID ASSIGN expression RANGE expression instruction

    ID              shift and go to state 29


state 14

    (29) assignable -> ID .
    (58) matrix_element -> ID . [ INTNUM , INTNUM ]
    (62) vector_element -> ID . [ expression ]

    ASSIGN          reduce using rule 29 (assignable -> ID .)
    ADDASSIGN       reduce using rule 29 (assignable -> ID .)
    SUBASSIGN       reduce using rule 29 (assignable -> ID .)
    MULASSIGN       reduce using rule 29 (assignable -> ID .)
    DIVASSIGN       reduce using rule 29 (assignable -> ID .)
    TRANSPOSE       reduce using rule 29 (assignable -> ID .)
    ADD             reduce using rule 29 (assignable -> ID .)
    SUB             reduce using rule 29 (assignable -> ID .)
    MUL             reduce using rule 29 (assignable -> ID .)
    DIV             reduce using rule 29 (assignable -> ID .)
    DOTADD          reduce using rule 29 (assignable -> ID .)
    DOTSUB          reduce using rule 29 (assignable -> ID .)
    DOTMUL          reduce using rule 29 (assignable -> ID .)
    DOTDIV          reduce using rule 29 (assignable -> ID .)
    GREATERTHAN     reduce using rule 29 (assignable -> ID .)
    LESSTHAN        reduce using rule 29 (assignable -> ID .)
    EQUAL           reduce using rule 29 (assignable -> ID .)
    NOTEQUAL        reduce using rule 29 (assignable -> ID .)
    LESSEQUAL       reduce using rule 29 (assignable -> ID .)
    GREATEREQUAL    reduce using rule 29 (assignable -> ID .)
    ,               reduce using rule 29 (assignable -> ID .)
    ;               reduce using rule 29 (assignable -> ID .)
    )               reduce using rule 29 (assignable -> ID .)
    ]               reduce using rule 29 (assignable -> ID .)
    RANGE           reduce using rule 29 (assignable -> ID .)
    BREAK           reduce using rule 29 (assignable -> ID .)
    CONTINUE        reduce using rule 29 (assignable -> ID .)
    {               reduce using rule 29 (assignable -> ID .)
    WHILE           reduce using rule 29 (assignable -> ID .)
    FOR             reduce using rule 29 (assignable -> ID .)
    IF              reduce using rule 29 (assignable -> ID .)
    PRINT           reduce using rule 29 (assignable -> ID .)
    RETURN          reduce using rule 29 (assignable -> ID .)
    ID              reduce using rule 29 (assignable -> ID .)
    [               shift and go to state 30


state 15

    (14) instruction_if -> IF . ( expression ) instruction
    (15) instruction_if -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 31


state 16

    (16) instruction_print -> PRINT . printables
    (17) printables -> . printable
    (18) printables -> . printable , printables
    (19) printable -> . expression
    (20) printable -> . str
    (32) expression -> . expression TRANSPOSE
    (33) expression -> . ( expression )
    (34) expression -> . create_matrix ( expression )
    (35) expression -> . SUB expression
    (36) expression -> . assignable
    (37) expression -> . matrix
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . expression ADD expression
    (41) expression -> . expression SUB expression
    (42) expression -> . expression MUL expression
    (43) expression -> . expression DIV expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression GREATERTHAN expression
    (49) expression -> . expression LESSTHAN expression
    (50) expression -> . expression EQUAL expression
    (51) expression -> . expression NOTEQUAL expression
    (52) expression -> . expression LESSEQUAL expression
    (53) expression -> . expression GREATEREQUAL expression
    (21) str -> . STRING
    (55) create_matrix -> . ZEROS
    (56) create_matrix -> . ONES
    (57) create_matrix -> . EYE
    (29) assignable -> . ID
    (30) assignable -> . matrix_element
    (31) assignable -> . vector_element
    (54) matrix -> . [ vectors ]
    (58) matrix_element -> . ID [ INTNUM , INTNUM ]
    (62) vector_element -> . ID [ expression ]

    (               shift and go to state 36
    SUB             shift and go to state 38
    INTNUM          shift and go to state 41
    FLOATNUM        shift and go to state 42
    STRING          shift and go to state 43
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ID              shift and go to state 14
    [               shift and go to state 47

    printables                     shift and go to state 32
    printable                      shift and go to state 33
    expression                     shift and go to state 34
    str                            shift and go to state 35
    create_matrix                  shift and go to state 37
    assignable                     shift and go to state 39
    matrix                         shift and go to state 40
    matrix_element                 shift and go to state 19
    vector_element                 shift and go to state 20

state 17

    (22) instruction_return -> RETURN .
    (23) instruction_return -> RETURN . expression
    (32) expression -> . expression TRANSPOSE
    (33) expression -> . ( expression )
    (34) expression -> . create_matrix ( expression )
    (35) expression -> . SUB expression
    (36) expression -> . assignable
    (37) expression -> . matrix
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . expression ADD expression
    (41) expression -> . expression SUB expression
    (42) expression -> . expression MUL expression
    (43) expression -> . expression DIV expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression GREATERTHAN expression
    (49) expression -> . expression LESSTHAN expression
    (50) expression -> . expression EQUAL expression
    (51) expression -> . expression NOTEQUAL expression
    (52) expression -> . expression LESSEQUAL expression
    (53) expression -> . expression GREATEREQUAL expression
    (55) create_matrix -> . ZEROS
    (56) create_matrix -> . ONES
    (57) create_matrix -> . EYE
    (29) assignable -> . ID
    (30) assignable -> . matrix_element
    (31) assignable -> . vector_element
    (54) matrix -> . [ vectors ]
    (58) matrix_element -> . ID [ INTNUM , INTNUM ]
    (62) vector_element -> . ID [ expression ]

    ;               reduce using rule 22 (instruction_return -> RETURN .)
    (               shift and go to state 36
    SUB             shift and go to state 38
    INTNUM          shift and go to state 41
    FLOATNUM        shift and go to state 42
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ID              shift and go to state 14
    [               shift and go to state 47

    expression                     shift and go to state 48
    create_matrix                  shift and go to state 37
    assignable                     shift and go to state 39
    matrix                         shift and go to state 40
    matrix_element                 shift and go to state 19
    vector_element                 shift and go to state 20

state 18

    (24) instruction_assign -> assignable . ASSIGN expression
    (25) instruction_assign -> assignable . ADDASSIGN expression
    (26) instruction_assign -> assignable . SUBASSIGN expression
    (27) instruction_assign -> assignable . MULASSIGN expression
    (28) instruction_assign -> assignable . DIVASSIGN expression

    ASSIGN          shift and go to state 49
    ADDASSIGN       shift and go to state 50
    SUBASSIGN       shift and go to state 51
    MULASSIGN       shift and go to state 52
    DIVASSIGN       shift and go to state 53


state 19

    (30) assignable -> matrix_element .

    ASSIGN          reduce using rule 30 (assignable -> matrix_element .)
    ADDASSIGN       reduce using rule 30 (assignable -> matrix_element .)
    SUBASSIGN       reduce using rule 30 (assignable -> matrix_element .)
    MULASSIGN       reduce using rule 30 (assignable -> matrix_element .)
    DIVASSIGN       reduce using rule 30 (assignable -> matrix_element .)
    TRANSPOSE       reduce using rule 30 (assignable -> matrix_element .)
    ADD             reduce using rule 30 (assignable -> matrix_element .)
    SUB             reduce using rule 30 (assignable -> matrix_element .)
    MUL             reduce using rule 30 (assignable -> matrix_element .)
    DIV             reduce using rule 30 (assignable -> matrix_element .)
    DOTADD          reduce using rule 30 (assignable -> matrix_element .)
    DOTSUB          reduce using rule 30 (assignable -> matrix_element .)
    DOTMUL          reduce using rule 30 (assignable -> matrix_element .)
    DOTDIV          reduce using rule 30 (assignable -> matrix_element .)
    GREATERTHAN     reduce using rule 30 (assignable -> matrix_element .)
    LESSTHAN        reduce using rule 30 (assignable -> matrix_element .)
    EQUAL           reduce using rule 30 (assignable -> matrix_element .)
    NOTEQUAL        reduce using rule 30 (assignable -> matrix_element .)
    LESSEQUAL       reduce using rule 30 (assignable -> matrix_element .)
    GREATEREQUAL    reduce using rule 30 (assignable -> matrix_element .)
    ,               reduce using rule 30 (assignable -> matrix_element .)
    ;               reduce using rule 30 (assignable -> matrix_element .)
    )               reduce using rule 30 (assignable -> matrix_element .)
    ]               reduce using rule 30 (assignable -> matrix_element .)
    RANGE           reduce using rule 30 (assignable -> matrix_element .)
    BREAK           reduce using rule 30 (assignable -> matrix_element .)
    CONTINUE        reduce using rule 30 (assignable -> matrix_element .)
    {               reduce using rule 30 (assignable -> matrix_element .)
    WHILE           reduce using rule 30 (assignable -> matrix_element .)
    FOR             reduce using rule 30 (assignable -> matrix_element .)
    IF              reduce using rule 30 (assignable -> matrix_element .)
    PRINT           reduce using rule 30 (assignable -> matrix_element .)
    RETURN          reduce using rule 30 (assignable -> matrix_element .)
    ID              reduce using rule 30 (assignable -> matrix_element .)


state 20

    (31) assignable -> vector_element .

    ASSIGN          reduce using rule 31 (assignable -> vector_element .)
    ADDASSIGN       reduce using rule 31 (assignable -> vector_element .)
    SUBASSIGN       reduce using rule 31 (assignable -> vector_element .)
    MULASSIGN       reduce using rule 31 (assignable -> vector_element .)
    DIVASSIGN       reduce using rule 31 (assignable -> vector_element .)
    TRANSPOSE       reduce using rule 31 (assignable -> vector_element .)
    ADD             reduce using rule 31 (assignable -> vector_element .)
    SUB             reduce using rule 31 (assignable -> vector_element .)
    MUL             reduce using rule 31 (assignable -> vector_element .)
    DIV             reduce using rule 31 (assignable -> vector_element .)
    DOTADD          reduce using rule 31 (assignable -> vector_element .)
    DOTSUB          reduce using rule 31 (assignable -> vector_element .)
    DOTMUL          reduce using rule 31 (assignable -> vector_element .)
    DOTDIV          reduce using rule 31 (assignable -> vector_element .)
    GREATERTHAN     reduce using rule 31 (assignable -> vector_element .)
    LESSTHAN        reduce using rule 31 (assignable -> vector_element .)
    EQUAL           reduce using rule 31 (assignable -> vector_element .)
    NOTEQUAL        reduce using rule 31 (assignable -> vector_element .)
    LESSEQUAL       reduce using rule 31 (assignable -> vector_element .)
    GREATEREQUAL    reduce using rule 31 (assignable -> vector_element .)
    ,               reduce using rule 31 (assignable -> vector_element .)
    ;               reduce using rule 31 (assignable -> vector_element .)
    )               reduce using rule 31 (assignable -> vector_element .)
    ]               reduce using rule 31 (assignable -> vector_element .)
    RANGE           reduce using rule 31 (assignable -> vector_element .)
    BREAK           reduce using rule 31 (assignable -> vector_element .)
    CONTINUE        reduce using rule 31 (assignable -> vector_element .)
    {               reduce using rule 31 (assignable -> vector_element .)
    WHILE           reduce using rule 31 (assignable -> vector_element .)
    FOR             reduce using rule 31 (assignable -> vector_element .)
    IF              reduce using rule 31 (assignable -> vector_element .)
    PRINT           reduce using rule 31 (assignable -> vector_element .)
    RETURN          reduce using rule 31 (assignable -> vector_element .)
    ID              reduce using rule 31 (assignable -> vector_element .)


state 21

    (1) program -> instruction program .

    $end            reduce using rule 1 (program -> instruction program .)
    }               reduce using rule 1 (program -> instruction program .)


state 22

    (6) instruction -> instruction_print ; .

    BREAK           reduce using rule 6 (instruction -> instruction_print ; .)
    CONTINUE        reduce using rule 6 (instruction -> instruction_print ; .)
    {               reduce using rule 6 (instruction -> instruction_print ; .)
    WHILE           reduce using rule 6 (instruction -> instruction_print ; .)
    FOR             reduce using rule 6 (instruction -> instruction_print ; .)
    IF              reduce using rule 6 (instruction -> instruction_print ; .)
    PRINT           reduce using rule 6 (instruction -> instruction_print ; .)
    RETURN          reduce using rule 6 (instruction -> instruction_print ; .)
    ID              reduce using rule 6 (instruction -> instruction_print ; .)
    $end            reduce using rule 6 (instruction -> instruction_print ; .)
    }               reduce using rule 6 (instruction -> instruction_print ; .)
    ELSE            reduce using rule 6 (instruction -> instruction_print ; .)


state 23

    (7) instruction -> instruction_return ; .

    BREAK           reduce using rule 7 (instruction -> instruction_return ; .)
    CONTINUE        reduce using rule 7 (instruction -> instruction_return ; .)
    {               reduce using rule 7 (instruction -> instruction_return ; .)
    WHILE           reduce using rule 7 (instruction -> instruction_return ; .)
    FOR             reduce using rule 7 (instruction -> instruction_return ; .)
    IF              reduce using rule 7 (instruction -> instruction_return ; .)
    PRINT           reduce using rule 7 (instruction -> instruction_return ; .)
    RETURN          reduce using rule 7 (instruction -> instruction_return ; .)
    ID              reduce using rule 7 (instruction -> instruction_return ; .)
    $end            reduce using rule 7 (instruction -> instruction_return ; .)
    }               reduce using rule 7 (instruction -> instruction_return ; .)
    ELSE            reduce using rule 7 (instruction -> instruction_return ; .)


state 24

    (8) instruction -> instruction_assign ; .
